--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
 </head>
 <body>
   <h1>Bienvenue</h1>
-  <p><a> </a></p>
+  <p><a> Je vais décrire en trois parties la création d'un serveur lamp avec une machine virtuel (VirtualBox)
+    1. Objectif de l’activité
+
+L’objectif était de mettre en place un serveur LAMP sur un ordinateur afin de comprendre comment un serveur web fonctionne et comment les composants Linux, Apache, MySQL et PHP interagissent.
+  
+    2. Déroulement de l’activité
+
+Nous avons commencé par installer Linux sur notre machine ou machine virtuelle.
+
+Ensuite, nous avons installé Apache pour gérer les requêtes web.
+
+Nous avons mis en place MySQL pour pouvoir stocker des données.
+
+Enfin, nous avons installé PHP pour rendre les pages web dynamiques.
+
+Une fois le serveur configuré, nous avons testé son fonctionnement en créant une page web simple affichant un message.
+ 
+    3. Résultats
+
+Le serveur LAMP fonctionne correctement.
+
+Apache affiche la page web dans le navigateur.
+
+Les composants interagissent correctement : PHP peut communiquer avec MySQL.
+
+L’activité a permis de comprendre le rôle de chaque élément du serveur.</a></p>
 </body>
 </html>
