--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Bienvenue</h1>
-  <p><a> Je vais décrire en trois parties la création d'un serveur lamp avec une machine virtuel (VirtualBox)
+  <p> Je vais décrire en trois parties la création d'un serveur lamp avec une machine virtuel (VirtualBox)
     1. Objectif de l’activité
 
 L’objectif était de mettre en place un serveur LAMP sur un ordinateur afin de comprendre comment un serveur web fonctionne et comment les composants Linux, Apache, MySQL et PHP interagissent.
@@ -31,6 +31,6 @@ Apache affiche la page web dans le navigateur.
 
 Les composants interagissent correctement : PHP peut communiquer avec MySQL.
 
-L’activité a permis de comprendre le rôle de chaque élément du serveur.</a></p>
+L’activité a permis de comprendre le rôle de chaque élément du serveur.</p>
 </body>
 </html>
