--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ L’objectif était de mettre en place un serveur LAMP sur un ordinateur afin de
   
     2. Déroulement de l’activité
 
-Nous avons commencé par installer Linux sur notre machine ou machine virtuelle.
+Nous avons commencé par installer Linux sur notre  machine virtuelle.
 
 Ensuite, nous avons installé Apache pour gérer les requêtes web.
 
