--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <h3> Mon parcours scolaire</h3>
 
   <p> j'ai fais deux ans au college Jean mermoz a Biscarrosse bourg, en 5eme j'ai redoublé et je suis allé finir mon college a gabarret a coter de mont de marsan ou j'ai eu mon brevet des colleges avec mention bien.
-    Au lycée je suis a la MFR de pontonx sur adour a coter de dax et je suis en apprentissage a la direction générale de l'armement-essais missiles a biscarrosse.</p>
-  <hr>
+    Au lycée je suis a la MFR de pontonx sur adour a coter de dax et je suis en apprentissage a la direction générale de l'armement-essais missiles a biscarrosse. Durant ma 3eme j'ai pu faire deux stages, le premier etait
+    a Born Bike a biscarrosse en Mécanique-commerce, puis le 2 eme a la DGA. C'est comme ça que j'ai reussi a trouvé une alternance mais aussi une voix qui me plaisait.</p>
+  
   <h3> Maintenant je vais expliquer ce que j'ai fais durant se debut d'année en 1er CIEL</h3>
   <p> Je vais décrire en trois parties la création d'un serveur lamp avec une machine virtuel (VirtualBox)
     1. Objectif de l’activité
