--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <h1>Bienvenue</h1>
   <h3> Mon parcours scolaire</h3>
 
-  <p> j'ai fais deux ans au college Jean mermoz a Biscarrosse bourg, en 5eme j'ai redoublé et je suis allé finir mon college a gabarret a coter de mont de marsan ou j'ai eu mon brevet des colleges avec mention bien.
-    Au lycée je suis a la MFR de pontonx sur adour a coter de dax et je suis en apprentissage a la direction générale de l'armement-essais missiles a biscarrosse. Durant ma 3eme j'ai pu faire deux stages, le premier etait
-    a Born Bike a biscarrosse en Mécanique-commerce, puis le 2 eme a la DGA. C'est comme ça que j'ai reussi a trouvé une alternance mais aussi une voix qui me plaisait.</p>
+  <p>- 6 -> 5eme a Jean mermoz Biscarrosse 📍
+     - Redoublement
+     - 5 -> 3eme a Gabarret Mont de Marsan 📍
+     - brevet avec mention bien, passage au Lycée
+     - 2nd -> 1ere Pontonx sur adour Dax 📍</p>
   
   <h3> Maintenant je vais expliquer ce que j'ai fais durant se debut d'année en 1er CIEL</h3>
   <p> Je vais décrire en trois parties la création d'un serveur lamp avec une machine virtuel (VirtualBox)
