--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
 
     <main>
       <section id="home" class="card" role="tabpanel" aria-labelledby="tab-home">
-        <h1>Bienvenue ✨</h1>
-        <p>Ton fichier s'appelle <strong>hebergeur-maxime</strong>. Si tu veux que GitHub Pages l'affiche comme page principale, renomme-le ensuite en <code>index.html</code> (ou ajoute le petit index de redirection ci-dessous).</p>
+        <h1>Bienvenue </h1>
+      <h3> Mon parcours scolaire</h3>
+        <p><strong>College</strong>
+           - 6->5eme a Jean mermoze Biscarrosse 📍
+           - redoublement
+           - 5-3eme a Gabarret Mont de marsan 📍
+           - Brevet mention bien
+            <strong>Lycée</strong>
+           - 2nd -> 1ere Pontonx sur Adour Dax 📍</p>
       </section>
 
       <section id="about" class="card" role="tabpanel" aria-labelledby="tab-about" hidden>
@@ -76,7 +83,7 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
       <section id="projects" class="card" role="tabpanel" aria-labelledby="tab-projects" hidden>
         <h1>Projets</h1>
         <div class="grid">
-          <article class="proj"><h3>Projet A</h3><p class="muted">Description courte du projet A. <a href="#" style="color:var(--accent)">Voir</a></p></article>
+          <article class="proj"><h3>Serveur Lamp</h3><p class="muted">Description courte du projet A. <a href="#" style="color:var(--accent)">Voir</a></p></article>
           <article class="proj"><h3>Projet B</h3><p class="muted">Description courte du projet B. <a href="#" style="color:var(--accent)">Voir</a></p></article>
           <article class="proj"><h3>Projet C</h3><p class="muted">Description courte du projet C. <a href="#" style="color:var(--accent)">Voir</a></p></article>
         </div>
