--- a/index.html
+++ b/index.html
@@ -64,14 +64,19 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
 
     <main>
       <section id="home" class="card" role="tabpanel" aria-labelledby="tab-home">
-      <h3> Mon parcours scolaire</h3>
+      <h1> Mon parcours scolaire</h1>
         <p><strong>College</strong>
-           - 6->5eme a Jean mermoze Biscarrosse 📍
-           - redoublement
-           - 5-3eme a Gabarret Mont de marsan 📍
-           - Brevet mention bien
+          <ul>
+            6->5eme a Jean mermoze Biscarrosse 📍
+            redoublement
+            5-3eme a Gabarret Mont de marsan 📍
+            Brevet mention bien
+          </ul>
             <strong>Lycée</strong>
-           - 2nd -> 1ere Pontonx sur Adour Dax 📍</p>
+          <ul>
+            2nd -> 1ere Pontonx sur Adour Dax 📍</p>
+        </ul>
+          
       </section>
 
       <section id="about" class="card" role="tabpanel" aria-labelledby="tab-about" hidden>
