--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
       <h1> Mon parcours scolaire</h1>
         <p><strong>College</strong>
           <ul>
-            6->5eme a Jean mermoze Biscarrosse 📍
-            redoublement
-            5-3eme a Gabarret Mont de marsan 📍
-            Brevet mention bien
+            <li>6->5eme a Jean mermoze Biscarrosse 📍</li>
+            <li>redoublement</li>
+            <li>5-3eme a Gabarret Mont de marsan 📍</li>
+            <li>Brevet mention bien</li>
           </ul>
             <strong>Lycée</strong>
           <ul>
