--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
           </ul>
             <strong>Lycée</strong>
           <ul>
-            2nd -> 1ere Pontonx sur Adour Dax 📍</p>
+            <li>2nd -> 1ere Pontonx sur Adour Dax 📍</p></li>
         </ul>
           
       </section>
