--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
           <ul>
             <li>2nd -> 1ere Pontonx sur Adour Dax 📍</p></li>
         </ul>
-          
+          <p><strong>Experience professionnel</strong></p>
+        <ul>
+        <li>Stage : Born Bike Biscarrosse Bourg 📍 -> Mécanique + Commmerce</li>
+        <li>Stage 2 : Direction Générale de l'Armement - Essais missile de biscarrosse 📍 -> Informatique</li>
+        </ul>
       </section>
 
       <section id="about" class="card" role="tabpanel" aria-labelledby="tab-about" hidden>
