--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
           <a class="tab" role="tab" href="#about" data-target="about" id="tab-about">À propos</a>
           <a class="tab" role="tab" href="#projects" data-target="projects" id="tab-projects">Projets</a>
           <a class="tab" role="tab" href="#contact" data-target="contact" id="tab-contact">Contact</a>
+          <a href="CV.pdf" target="_blank" style="...">Télécharger mon CV</a>
+
         </div>
       </nav>
     </header>
@@ -80,18 +82,26 @@ Copie ce contenu dans un fichier nommé **hebergeur-maxime** (ou hebergeur-maxim
         <ul>
         <li>Stage : Born Bike Biscarrosse Bourg 📍 -> Mécanique + Commmerce</li>
         <li>Stage 2 : Direction Générale de l'Armement - Essais missile de biscarrosse 📍 -> Informatique</li>
+        <li>Apprentissage : DGA-EM de Biscarrosse📍 -> Informatique </li>
         </ul>
+        
       </section>
 
       <section id="about" class="card" role="tabpanel" aria-labelledby="tab-about" hidden>
         <h1>À propos</h1>
         <p>Remplace ce texte par ta bio. Si tu veux, je peux automatiser l'ajout de projets et liens.</p>
+        <p>
+  <p>
+  <a  target="_blank" style="padding:10px 16px;border-radius:10px;background:var(--accent);color:#072033;font-weight:700;text-decoration:none;">Télécharger mon CV</a>
+</p>
+
+
       </section>
 
       <section id="projects" class="card" role="tabpanel" aria-labelledby="tab-projects" hidden>
         <h1>Projets</h1>
         <div class="grid">
-          <article class="proj"><h3>Serveur Lamp</h3><p class="muted">Description courte du projet A. <a href="#" style="color:var(--accent)">Voir</a></p></article>
+          <article class="proj"><h3>CV Maxime Lemaire</h3><p class="muted">Description courte du projet A. <a href="#" style="color:var(--accent)">Voir</a></p></article>
           <article class="proj"><h3>Projet B</h3><p class="muted">Description courte du projet B. <a href="#" style="color:var(--accent)">Voir</a></p></article>
           <article class="proj"><h3>Projet C</h3><p class="muted">Description courte du projet C. <a href="#" style="color:var(--accent)">Voir</a></p></article>
         </div>
